login, sign up, add information and logout function done, update welcomeScreen, Update Login and Signup screen .

--- a/FIT5046_A1/app/src/main/res/values/strings.xml
+++ b/FIT5046_A1/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">A1</string>
+    <string name="default_web_client_id">412309860019-tdlln4lg6bp5eibvbhffdvct1pemv29t.apps.googleusercontent.com</string>
 </resources>
